--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
+  intl: ^0.18.1
   flutter:
     sdk: flutter
 
