--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
   intl: ^0.18.1
+  flutter_guid: ^0.3.1
   flutter:
     sdk: flutter
 
