--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.5
   intl: ^0.18.1
   flutter_guid: ^0.3.1
+  sticky_grouped_list: ^3.1.0
   flutter:
     sdk: flutter
 
