--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.18.1
   flutter_guid: ^0.3.1
   sticky_grouped_list: ^3.1.0
+  signalr_netcore: ^1.3.5
   flutter:
     sdk: flutter
 
